[tool.poetry]
name = "djgo"
version = "0.1.0"
description = ""
authors = ["Mystic <215104920@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.14.0"
django = "^4.2.6"
gunicorn = "^21.2.0"
pillow = "^10.2.0"
pygments = "^2.16.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg = {extras = ["binary"], version = "^3.1.12"}


[[tool.poetry.source]]
name = "MirrorZ"
url = "https://mirrors.cernet.edu.cn/pypi/web/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
