[project]
name = "learning-django"
version = "0.0.1"
description = "A nice python project"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Mystic" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.2.3",
    "pygments>=2.18.0",
    "uvicorn>=0.32.0",
]
